syntax = "proto3";



import "AbilityString.proto";
import "AbilityScalarType.proto";

message AbilityScalarValueEntry {
	AbilityString key = 1;
	AbilityScalarType valueType = 2;
	oneof FOOIPEBDMGK {
		float float_value = 3;
		string string_value = 4;
		int32 int_value = 5;
		uint32 uint_value = 6;
	}
}
