syntax = "proto3";




message AnimatorParameterValueInfo {
	uint32 paraType = 1;
	oneof MMJOJNNFGCN {
		int32 int_val = 2;
		float float_val = 3;
		bool bool_val = 4;
	}
}
